# openpliPC

./: README  build_enigma2.sh  build_libs.sh  build_openpliPC.sh  build_openpwebif.sh  build_vdpauinfotest.sh
enigma2/: .gitignore  configure.ac
enigma2/data/: keymap.xml  setup.xml  xine.conf
enigma2/dvbsoftwareca/: ca_netlink.c  ca_netlink.h
enigma2/lib/python/Plugins/SystemPlugins/: Makefile.am
enigma2/lib/python/Plugins/SystemPlugins/OSD3DSetup/: plugin.py
enigma2/lib/python/Plugins/SystemPlugins/SoftwareManager/: plugin.py
enigma2/lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py
enigma2/lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  plugin.py
enigma2/main/: Makefile.am  bsod.cpp  enigma.cpp
enigma2/tools/: enigma2.sh.in
etc/enigma2/: settings
etc/tuxbox/: satellites.xml  timezone.xml
patches/: enigma2_add_lirc_support.patch  openpliPC_20111211b.patch  openpliPC_20111212.patch  openpliPC_20111214.patch  openpliPC_20111214a.patch  openpliPC_20111214b.patch  openpliPC_20111215.patch  openpliPC_20111216.patch  xine-lib_vaapi_20111226.patch  xine-lib_vaapi_20120201.patch  xinelib_20111210.patch  xinelib_20111212.patch  xinelib_20111213.patch  xinelib_20111214.patch  xinelib_20111214a.patch  xinelib_20111216.patch  xinelib_20111217.patch
xine-lib/: .hgsigs  .hgtags  ChangeLog  configure.ac  version.sh
xine-lib.old/: .hgignore  .hgtags  ChangeLog  Makefile.am  README
xine-lib.old/debian/: control  dh_xine
xine-lib.old/include/: Makefile.am  xine.h
xine-lib.old/po/: cs.po  (+6 more)
xine-lib/doc/faq/: Makefile.am
(+329 files in other folders)
